test_cases/pass/p11.lxr
SCRIPT AREA
START SCRIPT
DECLARE INT i
FOR (i=-2, i <= 0, i=i+1)
START FOR
    PRINT: i & " "
END FOR
END SCRIPT
