test_cases/fail/f29.lxr
SCRIPT AREA
START SCRIPT
DECLARE INT x
x="TRUE"
END SCRIPT
